missing values with sklearn

--- a/notebooks/handle-missing-data.ipynb
+++ b/notebooks/handle-missing-data.ipynb
@@ -52,7 +52,7 @@
     "    X_processed = preprocessor.fit_transform(X)\n",
     "    ```\n",
     "\n",
-    "**Tip:** Always inspect your data with `pandas` before preprocessing."
+    "**Tip:** Always inspect your data with `pandas` before preprocessing. # always check for missing values and data types to choose the appropriate preprocessing steps. Use `X.isnull().sum()` to check for missing values in a DataFrame."
    ]
   }
  ],
