14-06 pipeline and standarization

--- a/notebooks/unsupervised/k_clusters.ipynb
+++ b/notebooks/unsupervised/k_clusters.ipynb
@@ -74,7 +74,7 @@
    "id": "7f3db214",
    "metadata": {},
    "source": [
-    "for evaluation purposes"
+    "for evaluation purposes , he cross-tabulation shows that the 3 varieties of grain separate really well into 3 clusters. But depending on the type of data you are working with, the clustering may not always be this good."
    ]
   }
  ],
