--- a/notebooks/unsupervised/pipeline.ipynb
+++ b/notebooks/unsupervised/pipeline.ipynb
@@ -52,6 +52,35 @@
     "# Create pipeline: pipeline\n",
     "pipeline = make_pipeline(scaler,kmeans)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9aad637",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Import pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Fit the pipeline to samples\n",
+    "pipeline.fit(samples)\n",
+    "\n",
+    "# Calculate the cluster labels: labels\n",
+    "labels = pipeline.predict(samples)\n",
+    "\n",
+    "# Create a DataFrame with labels and species as columns: df\n",
+    "df = pd.DataFrame({'labels': labels, 'species': species})\n",
+    "\n",
+    "# Create crosstab: ct\n",
+    "ct = pd.crosstab(df['labels'], df['species'])\n",
+    "# Display ct\n",
+    "print(ct)\n"
+   ]
   }
  ],
  "metadata": {
